apex-mdapi/src/objects/FormField__c.object
<CustomObject>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefinitionOfForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DefinitionOfForm</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Definition type are allowed here</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Definition</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Definitions</relationshipLabel>
        <relationshipName>FormFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Readonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Readonly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResponseOf__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResponseOf</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Value</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FormResponse__c</referenceTo>
        <relationshipLabel>Response</relationshipLabel>
        <relationshipName>FormFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>text</fullName>
                </value>
                <value>
                    <fullName>number</fullName>
                </value>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>checkbox</fullName>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Form Field</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Fields</pluralLabel>
    <recordTypes>
        <fullName>Definition</fullName>
        <active>true</active>
        <label>Definition</label>
    </recordTypes>
    <recordTypes>
        <fullName>Value</fullName>
        <active>true</active>
        <label>Value</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ReadOnly_Checkbox</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;checkbox&apos;) &amp;&amp; Readonly__c</errorConditionFormula>
        <errorMessage>Checkbox can&apos;t be read-only</errorMessage>
    </validationRules>
</CustomObject>